Add button to create slice view window on second monitor

--- a/NeuroSegment/CMakeLists.txt
+++ b/NeuroSegment/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------
-set(MODULE_NAME QuickSegment)
+set(MODULE_NAME NeuroSegment)
 
 #-----------------------------------------------------------------------------
 set(MODULE_PYTHON_SCRIPTS
